config-root/namespaces/jx-staging/spring-boot-http-gradle/spring-boot-http-gradle-spring-boot-http-gradle-deploy.yaml
# Source: spring-boot-http-gradle/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-http-gradle-spring-boot-http-gradle
  labels:
    draft: draft-app
    chart: "spring-boot-http-gradle-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: spring-boot-http-gradle-spring-boot-http-gradle
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: spring-boot-http-gradle-spring-boot-http-gradle
    spec:
      containers:
        - name: spring-boot-http-gradle
          image: "gcr.io/jenkins-x-labs-bdd/spring-boot-http-gradle:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
