config-root/namespaces/jx-staging/spring-boot-http-gradle/spring-boot-http-gradle-ingress.yaml
# Source: spring-boot-http-gradle/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: spring-boot-http-gradle
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: spring-boot-http-gradle
              servicePort: 80
      host: spring-boot-http-gradle-jx-staging.35.184.150.204.nip.io
